--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   </head>
   <body>
     <div id="app">
+      <!-- Barre de navigation -->
       <header>
         <nav>
           <h1>COSMOMUSCLE</h1>
@@ -37,9 +38,11 @@
           </ul>
         </nav>
       </header>
+      <!-- Corps du site -->
       <main>
         <router-view></router-view>
       </main>
+      <!-- Pied de page -->
       <footer>
         <div class="footer-text">
           <p>Scientifiques diplômés en muscles</p>
