--- a/index.html
+++ b/index.html
@@ -28,15 +28,7 @@
     <div id="app">
       <!-- Barre de navigation -->
       <header>
-        <nav>
-          <h1>COSMOMUSCLE</h1>
-          <ul>
-            <li><router-link to="/">Liste articles</router-link></li>
-            <li><router-link to="/about">À propos</router-link></li>
-            <li><router-link to="/presentation">Présentation</router-link></li>
-            <li><router-link to="/creation">Création</router-link></li>
-          </ul>
-        </nav>
+        <navigation></navigation>
       </header>
       <!-- Corps du site -->
       <main>
@@ -45,7 +37,7 @@
       <!-- Pied de page -->
       <footer>
         <div class="footer-text">
-          <p>Scientifiques diplômés en muscles</p>
+          <p>Scientifiques diplômés en muscles - Théo Renan Justine</p>
         </div>
       </footer>
     </div>
